--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+WEATHER_API_URL=https://api.aerisapi.com
+WEATHER_API_ID=ZfufV8bAyYVcdoQtQHGaZ
+WEATHER_API_SECRET=0b1P5TSB9NTpu6lUBgYF9KDRns92JLE4bAAKje75
